# NetworkMessenger

./: CMakeLists.txt  README.md
src/client/: client.cpp  client.h  main_client.cpp
src/common/: socket.cpp  socket.h
